[package]
name = "lep"
version = "0.4.4"
authors = ["Timo Savola <timo.savola@iki.fi>"]
edition = "2018"
description = "Mini language for interactive consoles, featuring small code footprint."
documentation = "https://docs.rs/lep"
repository = "https://github.com/tsavola/lep"
readme = "README.md"
keywords = ["extension", "interpreter", "language", "lisp", "repl"]
categories = ["command-line-interface", "parser-implementations"]
license = "BSD-3-Clause"

[dev-dependencies]
rustyline = "6.0.0"

[[example]]
name = "cli"

[[example]]
name = "repl"
